--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "es6-module-loader": "^0.17.11",
+    "jquery": "^2.2.3",
+    "material-design-lite": "^1.1.3",
+    "systemjs": "^0.19.27",
     "traceur": "0.0.108"
   },
   "devDependencies": {
